@@ -4,8 +4,8 @@ import requests
 
 url = sys.argv[1]
 
-payload = { 'key' : 'value' }
-r = requests.post(url, data=payload)
+payload = { 'key' : 'value', 'firstname' : 'Jason', 'lastname' : 'Lefler' }
+r = requests.post(url, files=payload)
 
 print r.status_code
 print r.text
